# AI_voice_assistant_customer_support

./: VOICE_FLOWCHART.md  booking.py  db.py  helper.txt  llm.py  main.py  pyproject.toml  settings.json  state.py  stt.py  utils.py
app/: main.py
app/api/: voice_routes.py
app/core/: config.py
app/db/: session.py
app/services/: appointment_service.py  llm_service.py  session_store.py  stt_service.py  tts_service.py
app/services/llm/: __init__.py  base.py  factory.py  groq_provider.py  ollama_provider.py
app/utils/: logging_utils.py  text_parsing.py
